# medinria-superproject

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README.txt  medInria-dev.bat.in  medInria.bat.in  medInria.sh.in
cmake/: Call.cmake  CheckEnvironment.cmake  ExternalForceBuild.cmake  ExternalProjectConfig.cmake  ExternalProjects.cmake  FindPackage.cmake  PackageInit.cmake  Packaging.cmake  ParseProjectArgs.cmake  RunScripts.cmake  SetProjectsDirs.cmake  SystemIdentification.cmake
cmake/environment/: CheckEnvironment.cmake  GithubSshTest.cmake
cmake/launchers/: LauncherScripts.cmake  medInria-dev.bat.in  medInria.bat.in  medInria.sh.in
cmake/packaging/: ApplePackScript.cmake.in  Packaging.cmake
cmake/packaging/apple/: ApplePackScript.cmake.in  ApplePackaging.cmake  ApplePackaging.cmake~
cmake/packaging/linux/: LinuxPackaging.cmake  LinuxPackaging.cmake~  medInria_launcher.sh.in  medInria_launcher.sh.in~  postinst.in  postinst.in~
cmake/packaging/windows/: WindowsPackaging.cmake  WindowsPackaging.cmake~
packaging/: Description.txt  Packaging.cmake  Readme.txt  Welcome.txt
packaging/apple/: ApplePackaging.cmake  mac_packager.sh.in
packaging/linux/: CMakeLists.txt  GeneratorConfig.cmake.in  LinuxPackaging.cmake  medInria.desktop.in  medInria_launcher.sh.in  postinst.in  prerm.in
packaging/unix/: Launchers.cmake  medInria.sh.in
packaging/windows/: WindowsLaunchers.cmake  WindowsPackaging.cmake
patches/: VTK.patch
